Resolves tdf#163008 - Vertical tabs with small icons

GtkNotebook with the property groupname == "icons" arranges
the content for large icons above text. The patch changes
WB_DETAILS to WB_SMALLICON and optimzes the arrangement for
horizontal layout with icons <32px

The attribute enable-popup is false to suppress Gtk3's context
menu for the available tabs as this menu is filled via the
first item (at least the box as first item in a tab results
in empty label)

Change-Id: Ib575ad248aac304df27a9d1c2037d847cce167ae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186191
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins